   valuesFromBodyInput() methods to HTTPUtilities. Thanks to Satheesh
   Babu Vattekkat for the request.

   Fix bug 2816501 - Test numbers larger than 6 digits get truncated
   in out file. Thanks to Vivin Paliath for the report.

   Fix bug 2501418 - Handle socket lingering properly. Thanks to Dawid
   Weiss for the report and suggested fixes.


The Grinder 3.3
---------------

  Changes that may be incompatible with existing scripts:

    The Grinder now requires J2SE 5.0 ("Java 5"). J2SE 1.4 is no longer
    supported.

    Fix bug 2315181 - Classpath of distributed jars. When distributing
    scripts from the console, the worker process working directory is
    now the root of the local cache directory. This allows scripts to
    refer to distributed resources using relative paths. Thanks to
    ujik for reporting this.

  Other changes:

    The TCPProxy now supports HTTPS proxies that use
    challenge/response authentication protocols such as NTLM and
    Negotiate. This will allow scripts to be recorded through such a
    proxy, but are no plans to add support for replaying scripts
    through the proxy. Thanks to Suvendu Kumar Mohapatra for extensive
    testing of candidate patches.

    The stream support for HTTPRequest introduced in 3.2 has been
    enhanced to use the Content-Length header if provided. This allows
    the stream to be sent directly to the server without buffering,
    whether or not HTTP/1.1 chunking is available. Thanks to Walter
    Tuvell for the requirement and extensive testing.

    Add HTTPRequest.getPluginProcessContext() so subclasses outside of
    the Java package can access the process context. This is useful
    when following the advice in the setReadResponseBody
    documentation. Thanks to Walter Tuvell for the requirement.

    Updated Spanish translation from Antonio Manuel Muñiz Martin.

    Updated Polish translation from from KArol Muszynski.
